--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
   </div>
 
   <div id="gameOver" style="display:none; text-align:center;">
-    <h2>Game Over</h2>
-    <p id="scoreDisplay"></p>
-    <button id="restartBtn">Restart</button>
-    <button id="menuBtn">Menu</button>
-  </div>
+  <h2>Game Over</h2>
+  <img id="goImg" src="assets/go.png" alt="Game Over" style="margin:20px auto 10px; max-width:160px; display:block;" />
+  <p id="scoreDisplay"></p>
+  <button id="restartBtn">Restart</button>
+  <button id="menuBtn">Menu</button>
+</div>
+
 
   <div id="leaderboard" style="display:none; text-align:center;">
     <h2>🏆 Leaderboard</h2>
