--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </div>
 
   <div id="menu" style="display:none;">
-    <h1>Doodle Jump</h1>
+    <h1>Jumper Dobby</h1>
+    <img src="assets/gif.gif" alt="Game animation" style="margin: 20px auto 10px; display: block; max-width: 180px;">
     <div class="button-group">
       <button id="startBtn">Start</button>
       <button id="leaderboardBtn">Leaderboard</button>
